fix bug listcategory of products